--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
    margin-right: auto;
    border: 20px solid;
    background-color: black;
+
    
 }
 .ergebnis {
@@ -37,6 +38,10 @@
 .felder {
     margin: 3px;
     font-size: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .zahl {
